added forms and started submitInfo function

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <title>Salary Calculator</title>
 </head>
 <body>
+    <h1>Salary Calculator</h1>
+    <form onSubmit="submitInfo(event)">
+        <h2>Add Employee</h2>
+        <input id="firstname-input" type="text" value="First Name">
+        <input id="lastname-input" type="text" value="Last Name">
+        <input id="id-input" type="text" value="ID">
+        <input id="title-input" type="text" value="Title">
+        <input id="salary-input" type="text" value="Annual Salary">
+        <input type="submit" value="Submit">
+    </form>
     
     <script src="client.js"></script>
 </body>
