--- a/index.html
+++ b/index.html
@@ -8,17 +8,41 @@
     <title>Salary Calculator</title>
 </head>
 <body>
-    <h1>Salary Calculator</h1>
-    <form onSubmit="submitInfo(event)">
-        <h2>Add Employee</h2>
-        <input id="firstname-input" type="text" value="First Name">
-        <input id="lastname-input" type="text" value="Last Name">
-        <input id="id-input" type="text" value="ID">
-        <input id="title-input" type="text" value="Title">
-        <input id="salary-input" type="text" value="Annual Salary">
-        <input type="submit" value="Submit">
-    </form>
-    
+    <div id="calculator">
+        <h1>Salary Calculator</h1>
+        <form onSubmit="submitInfo(event)">
+            <h2>Add Employee</h2>
+            <input id="firstname-input" type="text" value="First Name">
+            <input id="lastname-input" type="text" value="Last Name">
+            <input id="id-input" type="text" value="ID">
+            <input id="title-input" type="text" value="Title">
+            <input id="salary-input" type="text" value="Annual Salary">
+            <input type="submit" value="Submit">
+        </form>
+        <h2>Employees</h2>
+        <table id="employeesTable">
+            <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>ID</th>
+                    <th>Title</th>
+                    <th>Annual Salary</th>
+                    <th>Remove</th>
+                </tr>
+            </thead>
+            <tbody id="employeesData">
+                <tr>
+                    <td>Sam</td>
+                    <td>Gossie</td>
+                    <td>160909</td>
+                    <td>Best Fella</td>
+                    <td>$200,000</td>
+                    <td><button onClick="removeRow(event)">Delete</button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div> 
     <script src="client.js"></script>
 </body>
 </html>
