updated CSS and attempted more of the total monthly salary function

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Salary Calculator</title>
 </head>
 <body>
-    <div id="calculator">
+    <header>
         <h1>Salary Calculator</h1>
+    </header>
+    <div id="calculator">
         <form onSubmit="submitInfo(event)">
             <h2>Add Employee</h2>
             <input id="firstname-input" type="text" value="First Name">
