--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </tbody>
         </table>
         <div id="totalMonthlySalary">
-            <h2>Monthly Salary: <span id="monthly-salary"></span></h2>
+            <h2>Monthly Salary: <span id="monthly-salary">0</span></h2>
         </div>
     </div> 
     <script src="client.js"></script>
