--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Sam</td>
+                    <!-- <td>Sam</td>
                     <td>Gossie</td>
                     <td>160909</td>
                     <td>Best Fella</td>
                     <td>$200,000</td>
-                    <td><button onClick="removeRow(event)">Delete</button></td>
+                    <td><button onClick="removeRow(event)">Delete</button></td> -->
                 </tr>
             </tbody>
         </table>
         <div id="totalMonthlySalary">
-            <h2>Monthly Salary: <span id="monthly-salary">0</span></h2>
+            <h2>Total Monthly Salary: <span id="monthly-salary">0</span></h2>
         </div>
     </div> 
     <script src="client.js"></script>
