Fixed appending issue for total monthly salary

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 </tr>
             </tbody>
         </table>
-        <div id="totalMonthlySalary">
-            <h2>Total Monthly Salary: <span id="monthly-salary">0</span></h2>
+        <div>
+            <h2>Total Monthly Salary: <span id="totalMonthlySalary">0</span></h2>
         </div>
     </div> 
     <script src="client.js"></script>
