--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,11 +14,11 @@
     <div id="calculator">
         <form onSubmit="submitInfo(event)">
             <h2>Add Employee</h2>
-            <input id="firstname-input" type="text" value="First Name">
-            <input id="lastname-input" type="text" value="Last Name">
-            <input id="id-input" type="text" value="ID">
-            <input id="title-input" type="text" value="Title">
-            <input id="salary-input" type="text" value="Annual Salary"><br >
+            <input id="firstname-input" type="text" placeholder="First Name">
+            <input id="lastname-input" type="text" placeholder="Last Name">
+            <input id="id-input" type="text" placeholder="ID">
+            <input id="title-input" type="text" placeholder="Title">
+            <input id="salary-input" type="text" placeholder="Annual Salary"><br >
             <input id="submit" type="submit" value="Submit">
         </form>
         <h2>Employees</h2>
